<resources>
    <string name="app_name">FeatherPost</string>
    <string name="nick" translatable="false">Nick</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone">Phone</string>
    <string name="posts">Posts</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="description">Description</string>
    <string name="comments">Comments:</string>
    <string name="likes">Likes:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="date">Date:</string>
    <string name="title">Title</string>
    <string name="post_template_content" translatable="false"> <![CDATA[Aliquam vel est accumsan, luctus mauris vitae, consequat libero. Cras bibendum risus eget velit consectetur, vel fermentum dui sollicitudin. Ut lobortis ipsum felis, ac elementum leo interdum sit amet. Vivamus tempus tincidunt mauris, non laoreet velit vulputate vel. <h3>Morbi euismod odio vitae egestas semper.</h3> Phasellus in facilisis est. <br><br> <b>Suspendisse luctus </b>augue ac sem varius feugiat. Sed euismod nibh massa. Cras tempor volutpat massa, ut eleifend est tempor sed. Proin vulputate ipsum id tellus semper scelerisque. Fusce feugiat bibendum interdum. Nunc laoreet enim vitae urna viverra, a egestas leo laoreet. ]]></string>
    <string name="zero" translatable="false">0</string>
    <string name="t" translatable="false">T</string>
    <string name="post_title">Post Title</string>
    <string name="choose_the_category">Choose the category</string>
    <string name="category">Category</string>
    <string name="tags">Tags</string>
    <string name="send">Send</string>
    <string name="save_draft">Save draft</string>
    <string name="clear">Clear</string>
    <string name="author">Author:</string>
    <string name="home">Home</string>
    <string name="add">Add post</string>
    <string name="profile">Profile</string>
    <string-array name="category">
        <item>Life style</item>
        <item>Food</item>
        <item>Technology</item>
        <item>Social media</item>
        <item>News</item>
        <item>Fashion</item>
        <item>Education</item>
    </string-array>
    <string name="new_empty_post">New empty post</string>
    <string name="template_1">Template 1</string>
    <string name="template_2">Template 2</string>
    <string name="saved">Saved</string>
    <string name="saved_1">Saved 1</string>
    <string name="search">Search</string>
    <string name="motivation_sentence">Show the world your ideas</string>
    <string name="type_new_post">Type a post here…</string>
    <string name="login" translatable="false">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="register">Register</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="add_heading" translatable="false">Add heading</string>
    <string name="advertiser_name" translatable="false">Advertiser name</string>
    <string name="ad_body" translatable="false">Ad body</string>
    <string name="learn_more" translatable="false">Learn more</string>
    <string name="you_didn_t_publish_any_articles_yet">You didn\'t publish any articles yet</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="phone_number">Phone number</string>
    <string name="nick_is_empty">Nick is empty</string>
    <string name="draft_saved">Draft saved</string>
    <string name="short_nick">Nick is too short</string>
    <string name="long_nick">Nick is too long</string>
    <string name="incorrect_nick">Nick is incorrect</string>
    <string name="empty_email">Email is required</string>
    <string name="incorrect_email">Email is incorrect</string>
    <string name="empty_password">Password is required</string>
    <string name="short_password">Password is too short</string>
    <string name="incorrect_password">Wrong password</string>
    <string name="empty_phone">Phone is required</string>
    <string name="incorrect_phone">Phone is incorrect</string>
    <string name="short_content">Content is too short</string>
    <string name="empty_content">Content cannot be empty!</string>
    <string name="short_title">Title is too short</string>
    <string name="long_title">Title is too long</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="succesful_login">Login successful</string>
</resources>