<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    android:elevation="5dp">

    <ImageView
        android:id="@+id/post_category_image"
        android:layout_width="84dp"
        android:layout_height="125dp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/post_category_image"
        android:columnCount="4"
        android:padding="8dp"
        android:rowCount="3">

        <TextView
            android:id="@+id/post_row_title"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_columnSpan="4"
            android:layout_marginBottom="10dp"
            android:text="@string/post_title"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"

            android:text="@string/comments" />

        <TextView
            android:id="@+id/post_row_comments_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/likes" />

        <TextView
            android:id="@+id/post_row_likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="3" />

        <TextView
            android:id="@+id/post_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:visibility="gone"
            android:text="@string/date"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/post_row_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/post_row_author"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginEnd="4dp"
            tools:ignore="RtlCompat" />
    </GridLayout>




</RelativeLayout>