<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_motive"
            android:columnCount="2"
            android:padding="12dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:rowCount="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@color/colorWhite"

                app:cardCornerRadius="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="65dp">

                    <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:contentDescription="@string/avatar"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name_ed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/user_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nick"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="18dp"
                android:background="@drawable/text_input_bg"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_user_email"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="18dp"
                android:background="@drawable/text_input_bg"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:fontFamily="sans-serif-medium"
                android:text="@string/phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_user_phone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="28dp"
                android:background="@drawable/text_input_bg"
                android:inputType="phone"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_user_description"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="18dp"
                android:background="@drawable/text_input_bg"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:paddingStart="8dp"
                android:scrollbars="vertical"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_user_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="18dp"
                android:background="@drawable/text_input_bg"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry" />

        </GridLayout>


        <Button
            android:id="@+id/edit_user_save_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_purple"
            android:text="@string/save"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <Button
            android:id="@+id/edit_user_cancel_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_purple"
            android:text="@string/back"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_user_save_button"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>